cabal-version:      2.4
name:               foliage
description:        Foliage is a tool to create custom Haskell package repositories, in a fully reproducible way.
version:            0.6.0.0
maintainer:         andrea@andreabedini.com
author:             Andrea Bedini
license:            MIT
license-file:       LICENSE
extra-source-files: templates/*.mustache

source-repository head
  type:     git
  location: https://github.com/andreabedini/foliage

executable foliage
    main-is:            Main.hs
    hs-source-dirs:     app
    other-modules:
        Distribution.Aeson
        Distribution.PackageDescription.FieldGrammar.Copy
        Distribution.Types.Orphans
        Foliage.CmdBuild
        Foliage.CmdCreateKeys
        Foliage.CmdImportIndex
        Foliage.CmdFormat
        Foliage.HackageSecurity
        Foliage.Meta
        Foliage.Meta.Aeson
        Foliage.Pages
        Foliage.PreparePackageVersion
        Foliage.PrepareSource
        Foliage.PrepareSdist
        Foliage.RemoteAsset
        Foliage.Shake
        Foliage.Time
        Foliage.UpdateCabalFile
        Foliage.Utils.Aeson
        Foliage.Utils.GitHub
        Network.URI.Orphans

    default-language:   GHC2021

    ghc-options:        -Wall
    ghc-options:        -threaded
    build-depends:
        base                 >=4.14.3.0   && <4.18,
        aeson                >=2.0.3.0    && <2.2,
        base64               >=0.4.2.3    && <0.5,
        binary,
        bytestring           >=0.10.12.0  && <0.12,
        Cabal                >=3.8        && <3.9,
        Cabal-syntax         >=3.8        && <3.9,
        cabal-install        >=3.8        && <3.9,
        containers           >=0.6.5.1    && <0.7,
        cryptohash-sha256    >=0.11.102.1 && <0.12,
        Diff                ^>=0.4.1,
        directory            >=1.3.6.0    && <1.4,
        filepath             >=1.4.2.1    && <1.5,
        hackage-security     >=0.6.2.1    && <0.7,
        network-uri         ^>=2.6.4.1,
        optparse-applicative >=0.17.0.0   && <0.18,
        shake                >=0.19.6     && <0.20,
        stache,
        tar                  >=0.5.1.1    && <0.6,
        text                 >=1.2.4.1    && <2.1,
        time                 >=1.9.3      && <1.13,
        time-compat          >=1.9.6.1    && <1.10,
        tomland              >=1.3.3.1    && <1.4,
        with-utf8            >=1.0.2.3    && <1.1,
        zlib                 >=0.6.2.3    && <0.7
