cabal-version:      2.4
name:               foliage
description:        Foliage is a tool to create custom Haskell package repositories, in a fully reproducible way.
version:            0.6.0.0
maintainer:         andrea@andreabedini.com
author:             Andrea Bedini
license:            MIT
license-file:       LICENSE
extra-source-files: templates/*.mustache

source-repository head
  type:     git
  location: https://github.com/andreabedini/foliage

executable foliage
    main-is:            Main.hs
    hs-source-dirs:     app
    other-modules:
        Distribution.Aeson
        Distribution.Types.Orphans
        Foliage.CmdBuild
        Foliage.CmdCreateKeys
        Foliage.CmdImportIndex
        Foliage.HackageSecurity
        Foliage.Meta
        Foliage.Meta.Aeson
        Foliage.Options
        Foliage.Pages
        Foliage.PreparePackageVersion
        Foliage.PrepareSource
        Foliage.PrepareSdist
        Foliage.RemoteAsset
        Foliage.Shake
        Foliage.Time
        Foliage.UpdateCabalFile
        Foliage.Utils.Aeson
        Foliage.Utils.GitHub
        Network.URI.Orphans

    default-language:   GHC2021

    ghc-options:        -Wall
    ghc-options:        -threaded
    build-depends:
        base                 >=4.14.3.0   && <4.18,
        aeson                >=2.0.3.0    && <2.2,
        base16               >=0.3.2.0    && <0.4,
        binary               >=0.8.9.0    && <0.9,
        bytestring           >=0.10.12.0  && <0.12,
        Cabal                >=3.10       && <3.11,
        Cabal-syntax         >=3.10       && <3.11,
        cabal-install        >=3.10       && <3.11,
        containers           >=0.6.5.1    && <0.7,
        cryptohash-sha256    >=0.11.102.1 && <0.12,
        directory            >=1.3.6.0    && <1.4,
        ed25519              >=0.0.5.0    && <0.1,
        filepath             >=1.4.2.1    && <1.5,
        hackage-security     >=0.6.2.1    && <0.7,
        network-uri          >=2.6.4.1    && <2.7,
        optparse-applicative >=0.17.0.0   && <0.18,
        shake                >=0.19.6     && <0.20,
        stache               >=2.3.3      && <2.4,
        tar                  >=0.5.1.1    && <0.6,
        text                 >=1.2.4.1    && <2.1,
        time                 >=1.9.3      && <1.13,
        time-compat          >=1.9.6.1    && <1.10,
        tomland              >=1.3.3.1    && <1.4,
        with-utf8            >=1.0.2.3    && <1.1,
        zlib                 >=0.6.2.3    && <0.7
