cabal-version:      3.8
name:               foliage
description:        Foliage is a tool to create custom Haskell package repositories, in a fully reproducible way.
version:            0.6.2.0
maintainer:         andrea@andreabedini.com
author:             Andrea Bedini
license:            MIT
license-file:       LICENSE
extra-source-files: templates/*.mustache

source-repository head
  type:     git
  location: https://github.com/andreabedini/foliage

common common-settings
    ghc-options:        -Wall -threaded
    default-language:   GHC2021

executable foliage
    import:             common-settings
    main-is:            Main.hs
    hs-source-dirs:     app
    other-modules:
        Distribution.Aeson
        Distribution.Types.Orphans
        Foliage.CmdBuild
        Foliage.CmdCreateKeys
        Foliage.CmdImportIndex
        Foliage.FetchURL
        Foliage.HackageSecurity
        Foliage.Meta
        Foliage.Meta.Aeson
        Foliage.Options
        Foliage.Pages
        Foliage.PreparePackageVersion
        Foliage.PrepareSource
        Foliage.PrepareSdist
        Foliage.Shake
        Foliage.Time
        Foliage.UpdateCabalFile
        Foliage.Utils.Aeson
        Foliage.Utils.GitHub
        Network.URI.Orphans

    build-depends:
        base                 >=4.14.3.0   && <4.23,
        aeson                >=2.2        && <2.3,
        base16               >=0.3.2.0    && <1.1,
        binary               >=0.8.9.0    && <0.11,
        bytestring           >=0.10.12.0  && <0.13,
        Cabal                >=3.14       && <3.18,
        Cabal-syntax         >=3.14       && <3.18,
        cabal-install        >=3.14       && <3.18,
        containers           >=0.6.5.1    && <0.9,
        cryptohash-sha256    >=0.11.102.1 && <0.12,
        directory            >=1.3.6.0    && <1.4,
        ed25519              >=0.0.5.0    && <0.1,
        filepath             >=1.4.2.1    && <1.6,
        hackage-security     >=0.6.2.1    && <0.7,
        network-uri          >=2.6.4.1    && <2.8,
        optparse-applicative >=0.17.0.0   && <0.20,
        shake                >=0.19.6     && <0.20,
        stache               >=2.3.3      && <2.4,
        tar                  >=0.5.1.1    && <0.8,
        text                 >=1.2.4.1    && <2.2,
        time                 >=1.9.3      && <1.16,
        time-compat          >=1.9.6.1    && <1.10,
        tomland              >=1.3.3.1    && <1.4,
        vector               >=0.13.0.0   && <0.14,
        with-utf8            >=1.0.2.3    && <1.2,
        zlib                 >=0.6.2.3    && <0.8,

test-suite foliage-test-suite
  import:              common-settings
  main-is:             Tests.hs
  other-modules:       Foliage.Tests.Utils
                     , Foliage.Tests.Tar
                     , Foliage.Tests.FetchURL
                     , Foliage.FetchURL
                     , Network.URI.Orphans
  build-depends:       base
                     , aeson
                     , binary
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , hashable
                     , network
                     , network-uri
                     , process
                     , shake
                     , tasty
                     , tasty-hunit
                     , tar
                     , temporary
                     , unix
  build-tool-depends:  foliage:foliage
  hs-source-dirs:      tests
                     , app
