cabal-version:   3.0
name:            pkg-a
version:         2.3.4.5
license:         NONE
author:          andrea.bedini@tweag.io
maintainer:      Andrea Bedini
build-type:      Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   src
    default-language: Haskell2010
